fix visibility

--- a/src/pages/task/kanban/column/task/styles.module.scss
+++ b/src/pages/task/kanban/column/task/styles.module.scss
@@ -38,7 +38,7 @@
     margin: .75rem 0;
     align-self: flex-start;
     & > div {
-    visibility: visible;
+    visibility: hidden;
 
     & > button {
       border: none;
